--- a/.github/workflows/first-example.yml
+++ b/.github/workflows/first-example.yml
@@ -4,10 +4,11 @@ jobs:
     first-job:
         runs-on: ubuntu-latest
         steps:
+        -  name: checkout 
+           uses: actions/checkout@v4      
         -  name: welcome message
            run: echo "my first github actions workflow"
         -  name: list files 
            run: ls 
         -  name: read file
            run: cat README.md
-           
