--- a/.github/workflows/generate-ascii.yml
+++ b/.github/workflows/generate-ascii.yml
@@ -8,5 +8,7 @@ jobs:
         -  name: checkout 
            uses: actions/checkout@v4 
         -  name: execute shell script
-           run: ./ascii-script.sh
+           run: | 
+              chmod +x ascii-script.sh           
+              ./ascii-script.sh
        
