--- a/.github/workflows/generate-ascii.yml
+++ b/.github/workflows/generate-ascii.yml
@@ -1,14 +1,29 @@
-name: generate acii art work
+name: generae Ascii Artwork
 on: push 
 
 jobs:
-    ascii-job:
-        runs-on: ubuntu-latest
-        steps: 
-        -  name: checkout 
-           uses: actions/checkout@v4 
-        -  name: execute shell script
-           run: | 
-              chmod +x ascii-script.sh           
-              ./ascii-script.sh
-       
+  build_job1: 
+    runs-on: ubuntu-latest
+
+    steps:
+      -  name: install cowsay Program
+         run: sudo apt-get install cowsay -y 
+      -  name: Execute cowsay cmd 
+         run: cowsay -f dragon "Run for cover, Iam a Dragon" >> dragon.txt
+      -  name: Sleep for 30 seconds
+         run: sleep 30 
+   test_job: 
+     runs-on: ubuntu-latest
+     needs: build_job1
+     steps: 
+       - name: Sleep for 10 seconds
+         run: sleep 10 
+       - name: Test file Exists
+         run: grep -i "dragon" dragon.txt
+
+    deploy_job: 
+      runs-on: ubuntu-lates
+      needs: test_job
+      steps: 
+        - name: Read file 
+          run: cat dragon.txt
