--- a/.github/workflows/generate-ascii.yml
+++ b/.github/workflows/generate-ascii.yml
@@ -10,14 +10,18 @@ jobs:
          run: sudo apt-get install cowsay -y 
       -  name: Execute cowsay cmd 
          run: cowsay -f dragon "Run for cover, Iam a Dragon" >> dragon.txt
-      -  name: Sleep for 30 seconds
-         run: sleep 30 
+      -  uses: actions/upload-artifact@v4
+         with: 
+          name: dragon-artifact
+          path: dragon.txt 
   test_job: 
      runs-on: ubuntu-latest
      needs: build_job1
      steps: 
-       - name: Sleep for 10 seconds
-         run: sleep 10 
+       - uses: actions/download-artifact@v4
+         with: 
+          name: dragon-artifact
+          
        - name: Test file Exists
          run: grep -i "dragon" dragon.txt
 
