--- a/.github/workflows/variables.yaml
+++ b/.github/workflows/variables.yaml
@@ -12,17 +12,17 @@ jobs:
     steps:
       - name: Docker build
         
-        run: docker build -t $CONTAINER_REGISTRY/$DOCKER_USERNAME/$IMAGE_NAME:latest
+        run: echo docker build -t $CONTAINER_REGISTRY/$DOCKER_USERNAME/$IMAGE_NAME:latest
       - name: Docker login 
         env: 
           DOCKER_PASSWORD: ThiMDha.So.MesomAli.2018
 
-        run: docker login --username=$DOCKER_USERNAME --password=$DOCKER_PASSWORD
+        run: echo docker login --username=$DOCKER_USERNAME --password=$DOCKER_PASSWORD
       - name: docker Publish 
-        run: docker push $CONTAINER_REGISTRY/$DOCKER_USERNAME/$IMAGE_NAME:latest
+        run: echo docker push $CONTAINER_REGISTRY/$DOCKER_USERNAME/$IMAGE_NAME:latest
   deploy: 
      needs: docker 
      runs-on: ubuntu-latest
      steps: 
        - name: docker Run 
-         run: docker run -d -p 8080:80 $CONTAINER_REGISTRY/$DOCKER_USERNAME/$IMAGE_NAME:lastes
+         run: echo docker run -d -p 8080:80 $CONTAINER_REGISTRY/$DOCKER_USERNAME/$IMAGE_NAME:lastes
